--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="jquery.cookie.js"></script>
   <script src="client.js"></script>
   <body>
-    <ul id="messages"></ul>
+    <ul id="messages">
+      
+    </ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
