--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-  <script src="jquery.cookie.js"></script>
-  <script src="client.js"></script>
+  <script src="static/jquery.cookie.js"></script>
+  <script src="static/client.js"></script>
   <body>
     <ul id="messages">
       
