--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
+    <link href="static/w3.css" rel="stylesheet" type="text/css" />
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      #messages {margin-left: 30vw; padding: 0; }
+      .message_bubble {
+        color: #000;
+        background: #BBB;
+        border-radius: 10px;
+        max-width: 50%;
+        word-wrap: break-word;
+        padding: 6px;
+      }
+      .right {
+        float: right;
+      }
+      .white {
+        background: white;
+      }
     </style>
   </head>
   <script src="/socket.io/socket.io.js"></script>
@@ -18,9 +31,13 @@
   <script src="static/jquery.cookie.js"></script>
   <script src="static/client.js"></script>
   <body>
-    <ul id="messages">
+    <div style="width: 100vw">
+      <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
+      <div id="messages" style="width: 40vw"></div>
 
-    </ul>
+      </div>
+      <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
+    </div>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
