--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Socket.IO chat</title>
     <link href="static/w3.css" rel="stylesheet" type="text/css" />
     <link href="static/messages.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 50%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages {margin-left: 30vw; padding: 0; }
@@ -22,6 +25,7 @@
       .white {
         background: white;
       }
+
     </style>
   </head>
   <script src="/socket.io/socket.io.js"></script>
@@ -29,7 +33,11 @@
   <script src="static/jquery.cookie.js"></script>
   <script src="static/client.js"></script>
   <body>
-    <div style="width: 100vw">
+    <div class="row">
+
+      <div class="col-md-6">
+
+    <div style="width: 50vw">
       <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
       <div id="messages" style="width: 40vw"></div>
       <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
@@ -37,6 +45,10 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+</div>
+<div class="col-md-6">
+brokentest420
+</div>
+</div>
   </body>
 </html>
-
