--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
 <html>
   <head>
+  <script src="static/interact.min.js"></script>
+
     <title>Socket.IO chat</title>
     <link href="static/w3.css" rel="stylesheet" type="text/css" />
     <link href="static/messages.css" rel="stylesheet" type="text/css" />
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages {margin-left: 30vw; padding: 0; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 46px; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; height: 40px; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; height: 40px; }
+      #messages {position: absolute; left: 0; top: 0; padding-bottom: 60px; width: 80vw; border: 1px solid red; z-index: -5;}
       .message_bubble {
         color: #000;
         background: #BBB;
@@ -23,20 +25,22 @@
         background: white;
       }
     </style>
+
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="static/jquery.cookie.js"></script>
   <script src="static/client.js"></script>
   <body>
-    <div style="width: 100vw">
-      <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
-      <div id="messages" style="width: 40vw"></div>
-      <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
-    </div>
+    <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
+    <div id="messages" onmouseover="$('#clipboard').stop();$('#clipboard').animate({left: '80vw'})"></div>
+    <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">&nbsp;</div>
+    <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
   </body>
+
 </html>
+
 
