--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
   <script src="static/interact.min.js"></script>
@@ -6,8 +6,6 @@
     <title>Socket.IO chat</title>
     <link href="static/w3.css" rel="stylesheet" type="text/css" />
     <link href="static/messages.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -26,7 +24,6 @@
       .white {
         background: white;
       }
-
     </style>
 
   </head>
@@ -42,11 +39,8 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-</div>
-<div class="col-md-6">
-brokentest420
-</div>
-</div>
   </body>
 
 </html>
+
+
