--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 46px; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; height: 40px; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; height: 40px; }
-      #messages {position: absolute; left: 0; top: 0; padding-bottom: 60px; width: 80vw; border: 1px solid red; z-index: -5;}
+      #messages {position: absolute; left: 0; top: 0; padding-bottom: 60px; width: 80vw; height: 100%; z-index: -5;}
       .message_bubble {
         color: #000;
         background: #BBB;
