--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
   <body>
     <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
     <div id="messages" onmouseover="$('#clipboard').stop();$('#clipboard').animate({left: '80vw'})"></div>
-    <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">&nbsp;</div>
+    <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">
+      <div id="clipboard_name" class="noselect">clipboard</div>
+    </div>
+
     <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
