--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
   <script src="static/jquery.cookie.js"></script>
   <script src="static/client.js"></script>
   <body>
-    <!--<div class="w3-container w3-cell w3-border-red" style="width: 30vw">&nbsp;</div>-->
-    <div id="messages" onmouseover="$('#clipboard').stop();$('#clipboard').animate({left: '80vw'})"></div>
-    <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">
-      <div id="clipboard_name" class="noselect">clipboard</div>
+    <div id="login_screen">
     </div>
+    <div id="messenger">
+      <div id="messages" onmouseover="$('#clipboard').stop();$('#clipboard').animate({left: '80vw'})"></div>
+      <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">
+        <div id="clipboard_name" class="noselect">clipboard</div>
+      </div>
 
-    <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+      <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
+      <form action="">
+        <input id="m" autocomplete="off" /><button>Send</button>
+      </form>
+    </div>
   </body>
 
 </html>
