--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <body>
     <div id="login_screen" class="w3-container w3-white">
       <center>
+        <img src="static/flipboard.png" />
         <h1>Flipboard</h1>
         <h4>Instantly take notes during conversations.</h4>
         <h4>Sign in to get started.</h4>
