--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 46px; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; height: 40px; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; height: 40px; }
-      #messages {position: absolute; left: 0; top: 0; padding-bottom: 60px; width: 80vw; height: 100%; z-index: -5;}
+      #messages {position: absolute; left: 0; top: 0; width: 80vw; height: Calc(100vh - 50px); z-index: -5; overflow-x: hidden; overflow-y: scroll;}
       .message_bubble {
         color: #000;
         background: #BBB;
@@ -50,6 +50,12 @@
       <div id="messages" onmouseover="$('#clipboard').stop();$('#clipboard').animate({left: '80vw'})"></div>
       <div id="clipboard" onmouseover="$(this).stop();$(this).animate({left: '50vw'})" style="width: 50vw">
         <div id="clipboard_name" class="noselect">clipboard</div>
+        <div style="position: absolute; right: 0; top: 0" class="noselect">
+          <div id="btn_add_open" class="w3-bar-item btn_add w3-green w3-text-white" opened="false"><center><span style="font-size: 47px;">+</span></center></div>
+          <div id="btn_add_list" class="w3-bar-item btn_add btn_add_extra w3-green w3-text-white"><center><span style="font-size: 15px; vertical-align: middle; line-height: 50px;">LIST</span></center></div>
+          <div id="btn_add_folder" class="w3-bar-item btn_add btn_add_extra w3-green w3-text-white"><center><span style="font-size: 15px; vertical-align: middle; line-height: 50px;">FOLDER</span></center></div>
+          <div id="btn_add_label" class="w3-bar-item btn_add btn_add_extra w3-green w3-text-white"><center><span style="font-size: 15px; vertical-align: middle; line-height: 50px;">LABEL</span></center></div>
+        </div>
       </div>
 
       <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
