--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <script src="static/interact.min.js"></script>
 
-    <title>Socket.IO chat</title>
+    <title>Flipboard</title>
     <link href="static/w3.css" rel="stylesheet" type="text/css" />
     <link href="static/messages.css" rel="stylesheet" type="text/css" />
     <style>
@@ -46,7 +46,7 @@
         <div class="w3-button w3-blue w3-text-bold w3-text-white w3-round-medium w3-hover-blue w3-large" style="width: 100%" id="sign_in">Sign In</div>
       </center>
     </div>
-    <div id="messenger">
+    <div id="messenger" style="z-index: -50; position: absolute; left: 0; top: 0;">
       <div id="groups" style="width: 20vw">
         <div style="height: 40px; line-height: 20px; vertical-align: middle; border-bottom: 1px solid lightgrey; position: absolute; top: 0; left: 0; width: 20vw;">
           <center><h3>Chats</h3></center>
