--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; left: 20vw; width: 60vw; height: 46px; }
+      form { background: white; padding: 3px; position: fixed; bottom: 0; left: 20vw; width: 60vw; height: 46px; border-top: 1px solid lightgrey; border-left: 1px solid grey;}
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; height: 40px; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; height: 40px; }
       #messages {position: absolute; left: 20vw; top: 40px; width: 60vw; height: Calc(100vh - 90px); z-index: -5; overflow-x: hidden; overflow-y: scroll; border-left: 1px solid grey;}
@@ -75,7 +75,7 @@
 
       <!--<div class="w3-container w3-cell w3-border-blue" style="width: 30vw">&nbsp;</div>-->
       <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
+        <input id="m" autocomplete="off" placeholder="Type a message, @name..." /><button class="w3-button">Send</button>
       </form>
     </div>
   </body>
